@@ -1,5 +1,6 @@
 requires 'perl' => '5.006';
 requires 'Carp';
 requires 'Scalar::Util';
-test_requires 'Test::More' => '0.88';
 test_requires 'overload';
+test_requires 'Test::More' => '0.88';
+test_requires 'Test::Warnings';
